--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,42 @@
 version: 2.1
-  jobs:
-    build:
-      docker:
-        - image: circleci/node:10.16.3
-      steps:
-        - checkout
-        - run: 
-            name: npm update
-            command: 'sudo npm install -g npm@latest'
-        - restore_cache:
-            key: dependency-cache-{{ checksum "package-lock.json" }}
-        - run:
-            name: npm install
-            command: 'npm install'
-        - save_cache:
-            key: dependency-cache-{{ checksum "package-lock.json" }}
-            path:
-              - ./node_modules
+orbs:
+  aws-s3: circleci/aws-s3@1.0.13
+jobs:
+  build:
+    working_directory: ~/repo
+    docker:
+      - image: circleci/node:10
+    steps:
+      - checkout
+      - restore_cache:
+          name: Restore cache
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+      - run: yarn install
+      - save_cache:
+          name: Save cache
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+      - run:
+          name: "Build project"
+          command: yarn build
+      - run:
+          name: "List files"
+          command: ls -lh
+      - aws-s3/sync:
+          from: dist
+          to: 's3://circleci-test'
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          aws-region: AWS_REGION
+          arguments: |
+            --acl public-read \
+            --cache-control "max-age=86400"
+          overwrite: true
+      - run:
+          name: Invalidate Cloudfront Cache"
+          command: |
+            aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID} --paths /\*
